--- a/javaproject.css
+++ b/javaproject.css
@@ -27,9 +27,13 @@ input{
     border: none;
     text-align: right;
     font-size: 40px;
-    /* box-shadow:0px 5px 15px rgb(113, 115, 119,0.5) ; */
+    box-shadow:-8px -8px 15px 8px rgb(47, 45, 45) ;
+    outline: 1px solid black;
+    outline-offset: 4px;
     cursor: pointer;
     margin-bottom: 16px;
+    color: white;
+   
 }
 input::placeholder{
     color: white;
@@ -45,8 +49,9 @@ button{
     outline: 1px solid black;
     outline-offset: 3px;
     font-size: 20px;
-    color: white;
+    color:white;
     border-radius: 50%;
+    
 
 }
 button:active{
